--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,30 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.MainActivity"
-    android:stretchColumns="1, 2"
-    android:layout_margin="8dp">
-
-
-    <TableRow>
-        <TextView
-            android:text="Local"
-            android:layout_column="0"
-            android:gravity="center"/>
-        <TextView
-            android:text="Today"
-            android:textStyle="bold"
-            android:layout_column="0"
-            android:gravity="center"/>
-        <TextView
-            android:text="Tommorrow"
-            android:textStyle="bold"
-            android:layout_column="0"
-            android:gravity="center"/>
-    </TableRow>
-
-
-</TableLayout>
+    tools:context=".ui.WeatherActivity"
+    android:orientation="vertical">
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvWeatherInfos"
+        android:clipToPadding="false"
+        android:padding="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+</LinearLayout>
